[gd_scene load_steps=8 format=3 uid="uid://53bklxhfjm1r"]

[ext_resource type="Script" path="res://user.gd" id="1_thkdi"]

[sub_resource type="LabelSettings" id="LabelSettings_tw2kn"]
font_size = 36

[sub_resource type="GDScript" id="GDScript_dmp1c"]
script/source = "extends ItemList

func read():
	self.clear()
	for e in Data.users[Data.selUser][\"dayOn\"][Data.date[\"year\"]][Data.date[\"month\"]]:
		self.add_item(str(e)+\".\"+str(Data.date[\"month\"])+\".\"+str(Data.date[\"year\"])+ \"   \"+ str(Data.users[Data.selUser][\"dayOn\"][Data.date[\"year\"]][Data.date[\"month\"]].get(e)))
		for i in Data.users[Data.selUser][\"dayOn\"][Data.date[\"year\"]][Data.date[\"month\"]][e]:
			match Data.users[Data.selUser][\"dayOn\"][Data.date[\"year\"]][Data.date[\"month\"]][e][i]:
				\"1\":
					self.set_item_custom_fg_color(self.item_count - 1,Color(255,255,0))
				\"0\":
					self.set_item_custom_fg_color(self.item_count - 1,Color(0,255,0))
				\"-1\":
					self.set_item_custom_fg_color(self.item_count - 1,Color(255,0,0))
				_:
					printerr(\"Overflow\")


func _ready():
	read()


func _on_delete_pressed() -> void:
	for e in self.get_selected_items():
		var txt : String = self.get_item_text(e).get_slice(\".\",0)
		Data.users[Data.selUser][\"dayOn\"][Data.date[\"year\"]][Data.date[\"month\"]].erase(int(txt))
		self.remove_item(e)
	self.deselect_all()



func _on_nb_pressed() -> void:
	for e in self.get_selected_items():
		var txt : String = self.get_item_text(e).get_slice(\".\",0)
		self.set_item_custom_fg_color(e,Color(255,0,0))
		for i in Data.users[Data.selUser][\"dayOn\"][Data.date[\"year\"]][Data.date[\"month\"]][int(txt)]:
			Data.users[Data.selUser][\"dayOn\"][Data.date[\"year\"]][Data.date[\"month\"]][int(txt)][i] = \"-1\"
	self.deselect_all()


func _on_np_pressed() -> void:
	for e in self.get_selected_items():
		var txt : String = self.get_item_text(e).get_slice(\".\",0)
		self.set_item_custom_fg_color(e,Color(255,255,0))
		for i in Data.users[Data.selUser][\"dayOn\"][Data.date[\"year\"]][Data.date[\"month\"]][int(txt)]:
			Data.users[Data.selUser][\"dayOn\"][Data.date[\"year\"]][Data.date[\"month\"]][int(txt)][i] = \"1\"
	self.deselect_all()


func _on_item_selected(index: int) -> void:
	await get_tree().create_timer(8.0).timeout
	self.deselect_all()


func _on_item_activated(index: int) -> void:
	self.set_item_custom_fg_color(index,Color(0,255,0))
	self.deselect(index)
"

[sub_resource type="GDScript" id="GDScript_34jkj"]
script/source = "extends LineEdit


func _ready():
	self.text = str(Data.date[\"month\"])
"

[sub_resource type="GDScript" id="GDScript_0f16t"]
script/source = "extends LineEdit


func _ready():
	self.text = str(Data.date[\"year\"])
"

[sub_resource type="GDScript" id="GDScript_nhcpy"]
script/source = "extends Button

@onready var day := $\"../../BoxContainer/LineEdit\"
@onready var month := $\"../../BoxContainer/LineEdit2\"
@onready var year := $\"../../BoxContainer/LineEdit3\"
@onready var item_list := $\"../../..\"

@onready var hour: LineEdit = $\"../LineEdit\"
@onready var min: LineEdit = $\"../LineEdit2\"



func _on_pressed():
	var hr : String = str(hour.text)+\":\"+str(min.text)
	Data.users[Data.selUser][\"dayOn\"][int(year.text)][int(month.text)][int(day.text)] = {}
	Data.users[Data.selUser][\"dayOn\"][int(year.text)][int(month.text)][int(day.text)][hr] = \"0\"
	Manager.saveUser(Data.selUser,%MP.user)
	item_list.read()
"

[sub_resource type="GDScript" id="GDScript_747ai"]
script/source = "extends Button
@onready var panel = %MP

var user : Dictionary = {
		\"name\":\"Paweł Harasymowicz\",
		\"cost\":\"60\",
		\"borrowed\":\"0\",
		\"startDate\":\"01.06\",
		\"endDate\":\"01.09\",
		\"dayOn\":{
			1:0,
			3:0
		},
		\"dayOff\":{
			\"12.08\":0
		},
		\"wild\":0
	}

func _on_pressed():
	Manager.saveUser(Data.selUser,panel.user)
"

[node name="user" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxContainer" type="BoxContainer" parent="AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MP" type="Panel" parent="AspectRatioContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_thkdi")

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/BoxContainer/MP"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -273.0
offset_right = 274.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="LineEdit" type="LineEdit" parent="AspectRatioContainer/BoxContainer/MP/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="AspectRatioContainer/BoxContainer/MP/HBoxContainer"]
layout_mode = 2
text = "/"
label_settings = SubResource("LabelSettings_tw2kn")

[node name="LineEdit2" type="LineEdit" parent="AspectRatioContainer/BoxContainer/MP/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/BoxContainer/MP"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -217.0
offset_right = 492.0
offset_bottom = 165.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/HBoxContainer/BoxContainer"]
layout_mode = 2
text = "Za godzine :"

[node name="LineEdit" type="LineEdit" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/HBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "60"

[node name="BoxContainer4" type="BoxContainer" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/HBoxContainer/BoxContainer4"]
layout_mode = 2
text = "Ma jeszcze zapłacić : "

[node name="LineEdit" type="LineEdit" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/HBoxContainer/BoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BoxContainer2" type="BoxContainer" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="np" type="Button" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Nieobecność - zgłoszona
"

[node name="nb" type="Button" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Nieobecność - nie zgłoszona
"

[node name="delete" type="Button" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = " Usuń 
"

[node name="ItemList" type="ItemList" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = SubResource("GDScript_dmp1c")

[node name="BoxContainer3" type="BoxContainer" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -66.0
grow_horizontal = 2
grow_vertical = 0
vertical = true

[node name="BoxContainer" type="BoxContainer" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList/BoxContainer3"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList/BoxContainer3/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "31"

[node name="LineEdit2" type="LineEdit" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList/BoxContainer3/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "12"
script = SubResource("GDScript_34jkj")

[node name="LineEdit3" type="LineEdit" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList/BoxContainer3/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "2024"
script = SubResource("GDScript_0f16t")

[node name="BoxContainer2" type="BoxContainer" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList/BoxContainer3"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList/BoxContainer3/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "16"

[node name="LineEdit2" type="LineEdit" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList/BoxContainer3/BoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "30"

[node name="Button" type="Button" parent="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList/BoxContainer3/BoxContainer2"]
layout_mode = 2
text = " Dodaj "
script = SubResource("GDScript_nhcpy")

[node name="Button" type="Button" parent="AspectRatioContainer/BoxContainer/MP"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
text = "Zapisz zmiany"
script = SubResource("GDScript_747ai")

[connection signal="pressed" from="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/BoxContainer2/np" to="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList" method="_on_np_pressed"]
[connection signal="pressed" from="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/BoxContainer2/nb" to="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList" method="_on_nb_pressed"]
[connection signal="pressed" from="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/BoxContainer2/delete" to="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList" method="_on_delete_pressed"]
[connection signal="item_activated" from="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList" to="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList" method="_on_item_activated"]
[connection signal="item_selected" from="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList" to="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList" method="_on_item_selected"]
[connection signal="pressed" from="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList/BoxContainer3/BoxContainer2/Button" to="AspectRatioContainer/BoxContainer/MP/VBoxContainer/VBoxContainer/ItemList/BoxContainer3/BoxContainer2/Button" method="_on_pressed"]
[connection signal="pressed" from="AspectRatioContainer/BoxContainer/MP/Button" to="AspectRatioContainer/BoxContainer/MP/Button" method="_on_pressed"]
